--- a/EDDI/Eddi.csproj
+++ b/EDDI/Eddi.csproj
@@ -133,19 +133,12 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MarketInfoReader.cs" />
-    <Compile Include="OutfittingInfoReader.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="ShipyardInfoReader.cs" />
     <Compile Include="StarSystemComboBox.cs" />
     <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Compile Include="EDDI.cs" />
-    <Compile Include="EliteConfiguration.cs" />
-    <Compile Include="EDDIMonitor.cs" />
-    <Compile Include="EDDIResponder.cs" />
     <Page Include="ChangeLog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -158,7 +151,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="EDDIConfiguration.cs" />
     <Compile Include="ChangeLog.xaml.cs">
       <DependentUpon>ChangeLog.xaml</DependentUpon>
     </Compile>
@@ -244,6 +236,10 @@
     <ProjectReference Include="..\DataProviderService\EddiDataProviderService.csproj">
       <Project>{c5f48807-921b-456d-a9e4-a0282e5e8cf1}</Project>
       <Name>EddiDataProviderService</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EddiCore\EddiCore.csproj">
+      <Project>{b5212a77-f85f-40fe-a907-6e06b8ca1d8b}</Project>
+      <Name>EddiCore</Name>
     </ProjectReference>
     <ProjectReference Include="..\EddiInaraService\EddiInaraService.csproj">
       <Project>{19AB6841-AA93-4D23-BE6D-4CB6883CDF62}</Project>
