--- a/EddiInterfaces/EddiInterfaces.csproj
+++ b/EddiInterfaces/EddiInterfaces.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B5212A77-F85F-40FE-A907-6E06B8CA1D8B}</ProjectGuid>
+    <ProjectGuid>{00CE67CB-90B4-43D7-BF62-6BC52C7C5B36}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EddiCore</RootNamespace>
-    <AssemblyName>EddiCore</AssemblyName>
+    <RootNamespace>EddiInterfaces</RootNamespace>
+    <AssemblyName>EddiInterfaces</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -37,59 +37,24 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.AddIn.Contract" />
-    <Reference Include="System.Collections.Immutable, Version=1.2.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Collections.Immutable.1.5.0\lib\netstandard2.0\System.Collections.Immutable.dll</HintPath>
-    </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EDDIConfiguration.cs" />
-    <Compile Include="EDDICore.cs" />
-    <Compile Include="EliteConfiguration.cs" />
-    <Compile Include="MarketInfoReader.cs" />
-    <Compile Include="OutfittingInfoReader.cs" />
+    <Compile Include="EDDIMonitor.cs" />
+    <Compile Include="EDDIResponder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ShipyardInfoReader.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CompanionAppService\EddiCompanionAppService.csproj">
-      <Project>{462ed721-1c9c-43fa-8a3f-4c1644363a5a}</Project>
-      <Name>EddiCompanionAppService</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DataDefinitions\EddiDataDefinitions.csproj">
-      <Project>{0c845b02-e283-43d8-91a7-205ad3397371}</Project>
-      <Name>EddiDataDefinitions</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DataProviderService\EddiDataProviderService.csproj">
-      <Project>{c5f48807-921b-456d-a9e4-a0282e5e8cf1}</Project>
-      <Name>EddiDataProviderService</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\EddiInterfaces\EddiInterfaces.csproj">
-      <Project>{00ce67cb-90b4-43d7-bf62-6bc52c7c5b36}</Project>
-      <Name>EddiInterfaces</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Events\EddiEvents.csproj">
       <Project>{2bb41c51-9be0-49c9-91fd-c4e444994ece}</Project>
       <Name>EddiEvents</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SpeechService\EddiSpeechService.csproj">
-      <Project>{19572a69-c13a-459d-ab72-2b0f034ac27f}</Project>
-      <Name>EddiSpeechService</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\StarMapService\EddiStarMapService.csproj">
-      <Project>{6614e6ad-65ae-49fc-850b-9df79d1cc998}</Project>
-      <Name>EddiStarMapService</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Utilities\Utilities.csproj">
-      <Project>{cd71dd2a-86ac-44a8-959b-e1c3069966bd}</Project>
-      <Name>Utilities</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
