--- a/EDDI/Eddi.csproj
+++ b/EDDI/Eddi.csproj
@@ -246,6 +246,10 @@
       <Project>{19AB6841-AA93-4D23-BE6D-4CB6883CDF62}</Project>
       <Name>EddiInaraService</Name>
     </ProjectReference>
+    <ProjectReference Include="..\EddiInterfaces\EddiInterfaces.csproj">
+      <Project>{00ce67cb-90b4-43d7-bf62-6bc52c7c5b36}</Project>
+      <Name>EddiInterfaces</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Events\EddiEvents.csproj">
       <Project>{2BB41C51-9BE0-49C9-91FD-C4E444994ECE}</Project>
       <Name>EddiEvents</Name>
