--- a/EDDPMonitor/EddiEddpMonitor.csproj
+++ b/EDDPMonitor/EddiEddpMonitor.csproj
@@ -105,6 +105,10 @@
       <Project>{c5f48807-921b-456d-a9e4-a0282e5e8cf1}</Project>
       <Name>EddiDataProviderService</Name>
     </ProjectReference>
+    <ProjectReference Include="..\EddiInterfaces\EddiInterfaces.csproj">
+      <Project>{00ce67cb-90b4-43d7-bf62-6bc52c7c5b36}</Project>
+      <Name>EddiInterfaces</Name>
+    </ProjectReference>
     <ProjectReference Include="..\EDDI\Eddi.csproj">
       <Project>{EC7BA042-A370-447F-8C3E-241358CEBCBB}</Project>
       <Name>Eddi</Name>
