--- a/GalnetMonitor/EddiGalnetMonitor.csproj
+++ b/GalnetMonitor/EddiGalnetMonitor.csproj
@@ -117,6 +117,10 @@
       <Project>{C5F48807-921B-456D-A9E4-A0282E5E8CF1}</Project>
       <Name>EddiDataProviderService</Name>
     </ProjectReference>
+    <ProjectReference Include="..\EddiInterfaces\EddiInterfaces.csproj">
+      <Project>{00ce67cb-90b4-43d7-bf62-6bc52c7c5b36}</Project>
+      <Name>EddiInterfaces</Name>
+    </ProjectReference>
     <ProjectReference Include="..\EDDI\Eddi.csproj">
       <Project>{EC7BA042-A370-447F-8C3E-241358CEBCBB}</Project>
       <Name>Eddi</Name>
