--- a/EDDI/Eddi.csproj
+++ b/EDDI/Eddi.csproj
@@ -134,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EddiUpgrader.cs" />
+    <Compile Include="MainWindowResponder.cs" />
     <Compile Include="MarketInfoReader.cs" />
     <Compile Include="OutfittingInfoReader.cs" />
     <Compile Include="Settings.cs" />
