--- a/IntegrationTests/packages.config
+++ b/IntegrationTests/packages.config
@@ -4,4 +4,5 @@
   <package id="MSTest.TestAdapter" version="2.1.1" targetFramework="net48" />
   <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net48" />
+  <package id="Rollbar" version="1.1.1" targetFramework="net48" />
 </packages>
