--- a/IntegrationTests/IntegrationTests.csproj
+++ b/IntegrationTests/IntegrationTests.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Compile Include="IntegrationBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SquadronEventsTest.cs" />
     <Compile Include="WinUIAutomationTests.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -80,6 +81,14 @@
     <ProjectReference Include="..\EddiCore\EddiCore.csproj">
       <Project>{28dc25d7-4dfd-4a77-b4ff-b9badb711ecb}</Project>
       <Name>EddiCore</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Events\EddiEvents.csproj">
+      <Project>{2BB41C51-9BE0-49C9-91FD-C4E444994ECE}</Project>
+      <Name>EddiEvents</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\JournalMonitor\EddiJournalMonitor.csproj">
+      <Project>{72B6F41D-0107-4D3A-8603-C3EDDA1C5243}</Project>
+      <Name>EddiJournalMonitor</Name>
     </ProjectReference>
     <ProjectReference Include="..\Utilities\Utilities.csproj">
       <Project>{CD71DD2A-86AC-44A8-959B-E1C3069966BD}</Project>
